--- a/src/Pages/MakeMoney/MakeMoney.css
+++ b/src/Pages/MakeMoney/MakeMoney.css
@@ -50,11 +50,16 @@
 .text-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   text-align: left;
   padding-left: 1em;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   /* background-color: white; */
+}
+.text-wrapper > h3 {
+  text-align: left;
+  text-shadow: 0.5px 0.5px 1px #5245c2;
+  color: #ff00bf;
 }
 .form-container {
   flex: 0 0 100%;
@@ -150,11 +155,76 @@
 .top-icon-box {
   width: 100%;
 }
-.icon > img {
+.icon-box > img {
   height: 100px;
   float: left;
   padding: 2em;
 }
-h3 {
-  /* padding-bottom: 1em; */
+.icon-box {
+  padding: 5px;
+}
+.mm-main-title {
+  padding: 5%;
+  background: rgb(36, 36, 36);
+  text-align: center;
+  height: 100% !important;
+  border-radius: 6px;
+  background: -webkit-linear-gradient(
+    bottom,
+    rgba(0, 0, 0, 0.7) 0%,
+    rgba(32, 32, 32, 0.4) 100%
+  );
+  background: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.7) 0%,
+    rgba(83, 83, 83, 0.4) 100%
+  );
+}
+.mm-title {
+  font-size: 30px;
+  color: white;
+  text-shadow: 1px 1px 2px #ff00bf;
+}
+.col {
+  display: flex;
+  flex-direction: column;
+}
+.a-box {
+  position: relative;
+  min-height: 1px;
+  padding-left: 14px;
+  padding-right: 14px;
+}
+.a-box > h1 {
+  margin-top: 0;
+  font-weight: 600;
+  font-size: 50px;
+  text-align: left;
+  text-shadow: 2px 2px 4px #ff00bf;
+  color: white;
+}
+.a-box > h4 {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  text-align: left;
+  /* margin-left: 2%; */
+  align-items: center;
+  color: white;
+}
+.driver-button {
+  padding: 1rem 4rem;
+  font-weight: 700;
+  background-color: #5245c2;
+  color: #ffffff;
+  border: none;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  border-radius: 99999rem;
+  box-shadow: 0 5px 0 rgba(17, 17, 31, 0.25);
+  margin-bottom: 5px;
+  width: 40%;
+  height: auto;
+}
+.not {
+  padding: 25px;
 }
