--- a/src/components/HowItWorks/HowItWorks.css
+++ b/src/components/HowItWorks/HowItWorks.css
@@ -1,6 +1,12 @@
 .how-to {
   margin-top: 5rem;
 }
+.how-to-rider {
+  margin-top: 1em;
+}
+.how-to {
+  margin-top: 5rem;
+}
 .how-to-section {
   position: relative;
 }
