--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -11,10 +11,17 @@
 .hero-text {
   text-align: center;
   position: absolute;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  align-items: center;
   top: 50%;
   left: 50% !important;
   transform: translate(-50%, -50%);
   color: white;
+}
+.hero-text > a {
+  margin: 20%;
 }
 .ride-container {
   height: 35px;
@@ -60,10 +67,10 @@
   background-color: white;
   align-items: center;
   padding: 46px 0;
-  background-color: #ffffff;
+  background-color: #ffffffde;
 }
 #white {
-  background-color: white;
+  background-color: #ff00bf;
 }
 #divv {
   /* font-size: 15px;
