--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,18 +1,30 @@
 .footer {
   display: flex;
-  flex-wrap: wrap;
-  margin-left: -14px;
-  margin-right: -14px;
+  /* flex-wrap: wrap; */
+  /* margin-left: -14px;
+  margin-right: -14px; */
   flex: 0 0 100%;
   min-width: 100%;
   background-color: black;
 }
-.footer-container > ul {
+.social-fa {
   display: flex;
   flex-direction: row;
-  padding-left: 15%;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+.footer-container > ul {
+  display: flex;
+  flex-direction: column;
+  /* padding-left: 15%; */
+  /* width: 100%; */
   list-style-type: none;
   /* padding-left: 0; */
+}
+.privacy-stuff {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 .socila-links > ul {
   list-style-type: none;
@@ -31,4 +43,35 @@ li > p {
 .fb {
   height: 20px;
   width: 20px;
+}
+/* Style all font awesome icons */
+.fa {
+  padding: 10px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+  background: #11111f;
+  color: white;
+}
+
+/* Twitter */
+.fa-twitter {
+  background: #11111f;
+  color: white;
+}
+.fa-instagram {
+  background: #11111f;
+  color: white;
 }
