--- a/src/Pages/MakeMoney/MakeMoney.css
+++ b/src/Pages/MakeMoney/MakeMoney.css
@@ -200,8 +200,8 @@
   font-weight: 600;
   font-size: 50px;
   text-align: left;
-  text-shadow: 2px 2px 4px #ff00bf;
-  color: white;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+  color: #ff00bf;
 }
 .a-box > h4 {
   margin-top: 0;
@@ -210,6 +210,7 @@
   /* margin-left: 2%; */
   align-items: center;
   color: white;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 .driver-button {
   padding: 1rem 4rem;
