--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,7 +1,7 @@
 .hero-image {
   background-image: url('./alessio.jpg');
   background-color: #cccccc;
-  height: 500px;
+  /* height: 500px; */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -82,6 +82,8 @@
   align-items: center;
   padding: 1em 0;
   background-color: #fffffff5;
+  margin-top: 2.5em;
+  /* margin-bottom: 1em; */
 }
 .why-button {
   display: flex;
