--- a/src/components/HowItWorks/HowItWorks.css
+++ b/src/components/HowItWorks/HowItWorks.css
@@ -15,6 +15,8 @@
   background-color: white;
   /* background-image: url(https://images.ctfassets.net/q8mvene1wzq4/3UsEjP8gZqlGqsPoe954mj/6b305dc4ab35430c50eddb69fa04788b/Bg_Illustration.jpg);
    */
+  margin-top: 3em;
+  margin-bottom: 2em;
 }
 .steps {
   background: rgb(36, 36, 36);
